# auto_documentation_by_ai

./: .gitignore  README.md  pyproject.toml
src/code_base/: Documentation.md  LogService.js  SuggestionImprovement.md
src/documentation_ai/: crew.py  main.py
src/documentation_ai/config/: agents.yaml  tasks.yaml
src/documentation_ai/tools/: custom_tool.py
