[project]
name = "documentation_ai"
version = "0.1.0"
description = "documentation_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "langchain-google-genai>=0.0.5",
    "openai>=1.0.0",
    "dedent (>=0.5,<0.6)"
]

[project.scripts]
documentation_ai = "documentation_ai.main:run"
run_crew = "documentation_ai.main:run"
train = "documentation_ai.main:train"
replay = "documentation_ai.main:replay"
test = "documentation_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
